--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2782,7 +2782,7 @@
   url: https://www.sciencedaily.com/releases/2018/12/181213131229.htm
   cat: "Science"
   status: "does"
-  url: 2018-12-13
+  date: 2018-12-13
 - title: "Auction commercial properties"
   url: https://www.showhouse.co.uk/news/first-english-property-sold-at-auction-using-ai/
   cat: "Professional"
